--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Github pages test</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JymyDev Solutions</title>
+</head>
+
+<body bgcolor=#1f618d>
+    <center>
+        <h1 style="color: white;">JymyDev desarrollo web</h1>
+    </center>
+</body>
+
+</html>
